# Autonomous_Robot

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
maze_solver/: .gitlab-ci.yml
maze_solver/sim_file/: simulation-kiwi.yml
maze_solver/sim_file/resource/david_map0/: map.json
maze_solver/sim_file/resource/example_map/: map.json
maze_solver/sim_file/resource/maze_map/: map.json
maze_solver/src/: opendlv-perception-helloworld.cpp  terminal_task1_commands.txt
recordings/: video-group11-track-1-20250508-1115.rec  video-group11-track-2-20250508-1144.rec
self_sustained_robot/map/resource/example_map/: map.json
self_sustained_robot/src/: opendlv-perception-helloworld.cpp  opendlv-perception-helloworldv_old.cpp  perception_PID_v1.1.cpp
src/: terminal_task2_commands.txt
track_follower/: .dockerignore
track_follower/recordings/: video-group11-maze-1-20250508-1208.rec
track_follower/src/: opendlv-perception-helloworld.cpp  terminal_task2_sim_commands.txt
tuning/: tuning.py
